@@ -2,32 +2,33 @@ use lithe::parse;
 
 fn main() {
     // TODO: read input file
-    parse("/ Hoi Zäme!");
+    let _ = parse("/ Hoi Zäme!");
 }
 
 #[cfg(test)]
 mod test {
     use super::parse;
 
+    // TODO: test parse results
+
     #[test]
     fn test_parse() {
-        // TODO: add unit tests
-        parse("/ Foo\n");
-        parse("/! Bar");
+        assert!(parse("/ Foo\n").is_ok());
+        assert!(parse("/! Bar").is_ok());
 
-        parse("doctype xml");
-        parse("doctype  xml");
-        parse("doctype xml ISO-8859-1");
-        parse("doctype html");
-        parse("doctype 5");
-        parse("doctype 1.1");
-        parse("doctype strict");
-        parse("doctype frameset");
-        parse("doctype mobile");
-        parse("doctype mobile");
-        parse("doctype basic");
-        parse("doctype transitional");
+        assert!(parse("doctype xml").is_ok());
+        assert!(parse("doctype  xml").is_ok());
+        assert!(parse("doctype xml ISO-8859-1").is_ok());
+        assert!(parse("doctype html").is_ok());
+        assert!(parse("doctype 5").is_ok());
+        assert!(parse("doctype 1.1").is_ok());
+        assert!(parse("doctype strict").is_ok());
+        assert!(parse("doctype frameset").is_ok());
+        assert!(parse("doctype mobile").is_ok());
+        assert!(parse("doctype mobile").is_ok());
+        assert!(parse("doctype basic").is_ok());
+        assert!(parse("doctype transitional").is_ok());
 
-        parse("doctype unknown");
+        assert!(parse("doctype unknown").is_err());
     }
 }
