@@ -21,5 +21,7 @@ name = "lithe"
 path = "src/lib.rs"
 
 [dependencies]
+anyhow = "1.0"
+lazy_static = "1.4"
 pest = "2.1.3"
 pest_derive = "2.1.0"
